--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Shino6u website test</title>
+    <title>Shino6u test</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <h1>Expert level test</h1>
+    <p>You are looking at this page right now this means this worked and I'm smart</p>
+    <p>You are looking at this page right now this means this worked and I'm smart</p>
+    <p>You are looking at this page right now this means this worked and I'm smart</p>
+    <p>You are looking at this page right now this means this worked and I'm smart</p>
   </body>
 </html>
