--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Shino6u test</title>
+    <link rel="stylesheet" href="styling.css">
   </head>
   <body>
     <h1>Expert level test</h1>
