--- a/index.html
+++ b/index.html
@@ -3,85 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Website</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-      overflow: hidden;
-      background: linear-gradient(45deg, #ffcc00 25%, transparent 25%, transparent 75%, #ffcc00 75%, #ffcc00), linear-gradient(-45deg, #ffcc00 25%, transparent 25%, transparent 75%, #ffcc00 75%, #ffcc00);
-      background-size: 50px 50px;
-      animation: scrollDiagonal 5s linear infinite;
-    }
-
-    @keyframes scrollDiagonal {
-      0% {
-        background-position: 0 0;
-      }
-      100% {
-        background-position: 50px 50px;
-      }
-    }
-
-    header {
-      background: #333;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-
-    main {
-      display: flex;
-    }
-
-    aside {
-      width: 200px;
-      background: #555;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-
-    section {
-      flex-grow: 1;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-
-    nav {
-      display: flex;
-      flex-direction: column;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      padding: 10px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-      transition: background 0.3s;
-    }
-
-    nav a:hover {
-      background: #666;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+  <title>Tokimeki Memorial Scrolling Background</title>
 </head>
 <body>
-  <header>
-    <h1>Your Website</h1>
-  </header>
-  <main>
-    <aside>
-      <nav>
-        <a href="#">Option 1</a>
-        <a href="#">Option 2</a>
-        <a href="#">Option 3</a>
-        <!-- Add more options as needed -->
-      </nav>
-    </aside>
-    <section>
-      <!-- Main content of your website goes here -->
-    </section>
-  </main>
+  <div class="background-container">
+    <div class="background"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
